--- a/index.html
+++ b/index.html
@@ -1,7 +1,105 @@
+ <!-- https://ncarb.github.io/bootstrap/docs/4.0/examples/album/ -->
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="includes/favicon.ico">
+
+    <title>OPEN | اوپن</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="includes/bootstrap.min.css" rel="stylesheet">
+
+    <!-- OPEN Styles -->
+    <link href="includes/open.css" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,400i,500,600,700,800,900" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <div class="navbar navbar-dark bg-dark" style="float: left; width: 100%;">
+      <div class="container d-flex justify-content-between">
+        <a href="https://open.com.pk" class="navbar-brand">
+          <!---->
+          OPEN | اوپن
+          <!---->
+        </a>
+      </div>
+    </div>
+
+    <section class="open-content text-center" style="margin: auto; width: 50%;">
+      <div style="margin: auto; width: 50%;">
+        <div><img src="images/OPEN-Home-Image.png" style="width: 300px; height: 319px;" class="fr-fic fr-dii fr-draggable"></div>
+        <div style="margin-bottom: 10px;"><a href="https://pkstn.co/ad1" target="_blank" class="open-link" style="color: #196c30;">تصوریری اشتہار دیکھیے</a> | <a href="https://pkstn.co/ad1" target="_blank" class="open-link" style="color: #196c30;">See commercial video</a></div>
+      </div>
+      <div class="container" style="margin: auto; width: 100%; max-width: 800px;">
+          <div class="text-tile">
+            <div class="urdu">
+              <h4>اوپن پاکستان ایجوکیشن نیٹورک (اوپن)</h4>
+              <h5>پاکستان میں آزادانہ دستیاب متصل تعلیم کی بنیاد۔</h5>ذیل میں سے کسی بھی زمرے پر کلک کرکے اوپن کورس کی تفصیلی فہر ست کو دیکھیئے۔ زیادہ تر مواد اردو اور انگریزی دونوں میں دستیاب ہے۔
+            </div>
+            <div style="height: 13px;"></div>
+            <div class="eng">
+              <h4>Open Pakistan Education Network (OPEN)</h4>
+              <h5>Building a foundation for open online education in Pakistan.</h5>Browse the OPEN course catalog by clicking on any of the categories below. Most content is available in both, Urdu and English.
+            </div>
+        </div>
+        <div style="width: 100%;" id="parent">
+          <div class="child">
+            <h3 class="urdu">معلوماتی فن آوری - انفارمیشن ٹیکنالوجی</h3>
+            <h4 class="eng">Information Technology</h4>
+            <a class="open-tile" href="/courses/application-development"><span class="urdu">سافٹ ویئر ایپلیکیشنز کی تخلیق</span><br>Application Development</a>
+            <a class="open-tile" href="/courses/ai"><span class="urdu">مصنوعی صلاحیت</span><br>Artificial Intelligence</a>
+            <a class="open-tile" href="/courses/cloud"><span class="urdu">کلاؤڈ کمپیوٹنگ یا ابری محاسبہ</span><br>Cloud Computing</a>
+            <a class="open-tile draft"><span class="urdu">ڈیو آپس</span><br>DevOps</a>
+          </div>
+          <div class="child">
+            <h3 class="urdu">مخصوص نطاق سے متعلق محاسبہ</h3>
+            <h4 class="eng">Domain-Specific Computing</h4>
+            <a class="open-tile draft"><span class="urdu">کمپیوٹر گیمز کی تخلیق</span><br>Game Development</a>
+            <a class="open-tile draft"><span class="urdu">منسلک آلات</span><br>Internet of Things (IoT)</a>
+            <a class="open-tile draft"><span class="urdu">جاسازی شده نظام</span><br>Embedded Systems</a>
+            <a class="open-tile draft"><span class="urdu">روبوٹکس</span><br>Robotics</a>
+          </div>
+          <div class="child">
+            <h3 class="urdu">محاسبہ</h3>
+            <h4 class="eng">Computing</h4>
+            <a class="open-tile draft"><span class="urdu">کوانتومی محاسبہ</span><br>Quantum Computing</a>
+            <a class="open-tile draft"><span class="urdu">جھرمٹی محاسبہ</span><br>Cluster Computing</a>
+            <a class="open-tile draft"><span class="urdu">محاسبہ برائہ تیز کارکردگی</span><br>High Performance Computing</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="text-muted" style="float: left; width: 100%; height: 150px;">
+      <div id="social">
+        <ul>
+          <li><a href="https://github.com/OpenEdPakistan" target="_blank"><i class="fa fa-github"></i></a></li>
+          <li><a href="https://twitter.com/OpenEdPakistan" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+          <li><a href="https://medium.com/@OpenEdPakistan" target="_blank"><i class="fa fa-medium"></i></a></li>
+          <li><a href="http://www.linkedin.com/in/OpenEdPakistan" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+        </ul>
+      </div>
+    </footer>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="includes/jquery-3.2.1.slim.min.js"></script>
+    <script>window.jQuery || document.write('')</script>
+    <script src="includes/popper.min.js"></script>
+    <script src="includes/holder.min.js"></script>
+    <script>
+      $(function () {
+        Holder.addTheme("thumb", { background: "#55595c", foreground: "#eceeef", text: "Thumbnail" });
+      });
+    </script>
+    <script src="includes/bootstrap.min.js"></script>
+  </body>
 </html>
